--- a/_config.yml
+++ b/_config.yml
@@ -133,8 +133,7 @@ yat:
 #   - categories.html
 #   - tags.html
 #   - about.md
-
-Page default value
+#Page default value
 defaults:
   home:
     heading: "Watermelon Blog"
