--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
 url: "https://m-watermelon.github.io/WatermelonBlog/" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: "/assets/images/banners/download(1).png" # the favicon for your site
+favicon: /assets/images/banners/download(1).png # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -138,7 +138,7 @@ defaults:
   home:
     heading: "Watermelon Blog"
 #     subheading: "Your awesome subheading"
-    banner: /assets/images/banners/watermelon_4x.png
+    banner: assets/images/banners/watermelon_4x.png
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
