--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@
 title: Watermelon Blog
 email: no email yet
 author: M-Watermelon
-copyright: Copyright © 1970-2010
+copyright: Copyright © 2022
 description: >- # this means to ignore newlines until "baseurl:"
   This is my blog site, I will be keeping track of programming projects and my progress in cybersecurity here too.
 
