--- a/_config.yml
+++ b/_config.yml
@@ -25,14 +25,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Watermelon Blog
-email: no email yet
+email: m.watermelon20@gmail.com
 author: M-Watermelon
 copyright: Copyright © 2022
 description: >- # this means to ignore newlines until "baseurl:"
   This is my blog site, I will be keeping track of programming projects and my progress in cybersecurity here too.
 
-baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
-url: "https://m-watermelon.github.io/WatermelonBlog/" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
+url: "https://m-watermelon.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: /assets/images/banners/download(1).png # the favicon for your site
 
 # Yat date format
