--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my blog site, I will be keeping track of programming projects and my progress in cybersecurity here too.
 
 #baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
-url: "https://m-watermelon.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://m-watermelon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: /assets/images/banners/download(1).png # the favicon for your site
 
 # Yat date format
