--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ title: Watermelon Blog
 email: m.watermelon20@gmail.com
 author: M-Watermelon
 copyright: Copyright © 2022
-description: >- # this means to ignore newlines until "baseurl:"
-  This is my blog site, I will be keeping track of programming projects and my progress in cybersecurity here too.
+#description: >- # this means to ignore newlines until "baseurl:"
 
 #baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
 url: "https://m-watermelon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
