--- a/_config.yml
+++ b/_config.yml
@@ -25,14 +25,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Watermelon's Blog
-email: m.watermelon20@gmail.com
 author: M-Watermelon
-copyright: Copyright © 2022
+copyright: Copyright © 2024
 #description: >- # this means to ignore newlines until "baseurl:"
 
 #baseurl: "/WatermelonBlog" # the subpath of your site, e.g. /blog
 url: "https://m-watermelon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: /assets/images/banners/download(1).png # the favicon for your site
+favicon: /assets/images/banners/favicon2.png # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -137,7 +136,7 @@ defaults:
   home:
     heading: "Watermelon Blog"
 #     subheading: "Your awesome subheading"
-    banner: assets/images/banners/watermelon_4x.png
+    banner: assets/images/banners/red_pink.png
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
